Add readme and service class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
-spring.application.name=smart-exception
+spring.application.name=smart-exception-ai
+
+# Server configuration
+server.port=8080
+
+
+# Ollama configuration
+# Ollama API base URL and model         
+spring.ai.ollama.base-url=http://localhost:11434
+spring.ai.ollama.chat.model=llama3.2
+spring.ai.ollama.embedding.model=llama3.2
+spring.ai.ollama.chat.options.max-tokens=500
+spring.ai.ollama.chat.options.temperature=0.7
+
+# Chroma configuration (Vector store)
+# spring.ai.vectorstore.chroma.initialize-schema=true
+# spring.ai.vectorstore.chroma.collection-name=demo
