--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=smart-exception-ai
 
 # Server configuration
 server.port=8080
+management.endpoints.web.base-path=/actuator
+management.endpoints.web.exposure.include=*
 
 
 # Ollama configuration
