Integrate chroma db and upload text file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,5 @@ spring.ai.ollama.chat.options.max-tokens=500
 spring.ai.ollama.chat.options.temperature=0.7
 
 # Chroma configuration (Vector store)
-# spring.ai.vectorstore.chroma.initialize-schema=true
-# spring.ai.vectorstore.chroma.collection-name=demo
+spring.ai.vectorstore.chroma.initialize-schema=true
+spring.ai.vectorstore.chroma.collection-name=exception-collection
